--- a/less/variables.less
+++ b/less/variables.less
@@ -2,8 +2,10 @@
 
 // Gray and Brand Colors for use across theme
 
-@theme-primary:    #fed136;
-@theme-danger:     #e74c3c;
+// @theme-primary:    #fed136;
+@theme-primary:    #235ba8;
+@theme-danger:     #998542;
+//@theme-danger:     #e74c3c;
 
 @gray-base:        #000;
 @gray-darker:      lighten(@gray-base, 13.5%); // #222
